second test of navigation

--- a/bio.html
+++ b/bio.html
@@ -1,2 +1,4 @@
-<nav>https://fab514.github.io/jurassic-park/</nav>
-Testing Roar
+<nav><index class="html"></index></nav>
+
+<h1>Bio testing roar</h1>
+
