--- a/bio.html
+++ b/bio.html
@@ -1,4 +1,10 @@
-<nav><index class="html"></index></nav>
-
-<h1>Bio testing roar</h1>
+<!DOCTYPE html> 
+<html>
+    <head>
+       <title>Roar Picture</title>
+    </head>
+    <Body>
+        <img src="./T-rex picture.jpg"/>
+    </Body>
+</html>
 
