--- a/bio.html
+++ b/bio.html
@@ -5,6 +5,9 @@
     </head>
     <Body>
         <img src="./T-rex picture.jpg"/>
+        <nav>
+            <a href="/index.html">Back to Home Page</a>
+        </nav>
     </Body>
 </html>
 
