--- a/bio.html
+++ b/bio.html
@@ -6,7 +6,7 @@
     <Body>
         <img src="./T-rex picture.jpg"/>
         <nav>
-            <a href="/index.html">Back to Home Page</a>
+            <a href="./index.html">Back to Home Page</a>
         </nav>
     </Body>
 </html>
