Changed the google image links to a dino directory link

--- a/bio.html
+++ b/bio.html
@@ -9,13 +9,13 @@
         <h2>Jurassic Park</h2>
         <nav>
         <ol>
-            <li><a href="https://www.google.com/search?q=brachiosaurus&client=firefox-b-1-d&sxsrf=ALeKk02_o3DRM893eOYeUZHWegktjOrwYg:1601478902156&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiM08_olZHsAhXYWc0KHS4nCHYQ_AUoAXoECA8QAw&biw=1696&bih=829">Brachiosaurus</a></li>
-            <li><a href="https://www.google.com/search?q=dilophosaurus&tbm=isch&ved=2ahUKEwiXy5XqlZHsAhXCY60KHeENCIQQ2-cCegQIABAA&oq=dilophosaurus&gs_lcp=CgNpbWcQAzIFCAAQsQMyBQgAELEDMgUIABCxAzICCAAyAggAMgIIADICCAAyAggAMgIIADICCAA6BggAEAcQHjoGCAAQChAYOggIABAIEAcQHlDv3AlYmZAKYI6bCmgAcAB4AIABWYgBxAiSAQIxNJgBAKABAaoBC2d3cy13aXotaW1nwAEB&sclient=img&ei=-aB0X9fqF8LHtQXhm6CgCA&bih=829&biw=1696&client=firefox-b-1-d">Dilophosaurus</a></li>
-            <li><a href="https://www.google.com/search?q=gallimimus&tbm=isch&ved=2ahUKEwipmM-6lpHsAhXJUawKHR2gA2sQ2-cCegQIABAA&oq=galli&gs_lcp=CgNpbWcQARgAMgcIABCxAxBDMgUIABCxAzIECAAQQzIECAAQQzIECAAQQzIFCAAQsQMyBAgAEEMyAggAMgUIABCxAzICCAA6BAgjECc6BwgjEOoCECc6CAgAELEDEIMBULrKB1jL4Adgye8HaAFwAHgCgAFsiAGyC5IBBDE4LjGYAQCgAQGqAQtnd3Mtd2l6LWltZ7ABCsABAQ&sclient=img&ei=oqF0X6m_BsmjsQWdwI7YBg&bih=829&biw=1696&client=firefox-b-1-d">Gallimimus</a></li>
-            <li><a href="https://www.google.com/search?q=parasaurolophus+in+jurassic+park&tbm=isch&ved=2ahUKEwi57OT4lpHsAhVQQKwKHSyADTUQ2-cCegQIABAA&oq=pa&gs_lcp=CgNpbWcQARgAMgQIIxAnMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDOgIIADoHCCMQ6gIQJzoFCAAQsQNQkIIGWNWcBmCbrQZoAnAAeAKAAW6IAdQHkgEEMTEuMZgBAKABAaoBC2d3cy13aXotaW1nsAEKwAEB&sclient=img&ei=JKJ0X7nKHdCAsQWsgLaoAw&bih=829&biw=1696&client=firefox-b-1-d">Parasaurolophus</a></li>
-            <li><a href="https://www.google.com/search?q=triceratops&tbm=isch&ved=2ahUKEwjBqcfgl5HsAhWNAp0JHVFfCyMQ2-cCegQIABAA&oq=triceratops&gs_lcp=CgNpbWcQAzIECCMQJzIFCAAQsQMyAggAMgIIADICCAAyAggAMgIIADICCAAyAggAMgIIAFCVLliWO2CbQWgAcAB4AIABbYgBpgqSAQQxNS4ymAEAoAEBqgELZ3dzLXdpei1pbWfAAQE&sclient=img&ei=_qJ0X8GyBo2F9PwP0b6tmAI&bih=829&biw=1696&client=firefox-b-1-d">Triceratops</a></li>
-            <li><a href="https://www.google.com/search?q=tyrannosaurus+rex&tbm=isch&ved=2ahUKEwig0ZLll5HsAhWZBJ0JHR1ZBZUQ2-cCegQIABAA&oq=tyra&gs_lcp=CgNpbWcQARgAMgcIABCxAxBDMgcIABCxAxBDMgUIABCxAzICCAAyBQgAELEDMgUIABCxAzIFCAAQsQMyAggAMgQIABBDMgUIABCxAzoECCMQJzoICAAQsQMQgwFQ6O0GWJyCB2CHkwdoAHAAeACAAVqIAb8HkgECMTOYAQCgAQGqAQtnd3Mtd2l6LWltZ8ABAQ&sclient=img&ei=B6N0X-CxLJmJ9PwPnbKVqAk&bih=829&biw=1696&client=firefox-b-1-d">Tyrannosaurus Rex</a></li>
-            <li><a href="https://www.google.com/search?q=velociraptor&tbm=isch&ved=2ahUKEwjJ5smdmJHsAhXOOM0KHVbIDhEQ2-cCegQIABAA&oq=vel&gs_lcp=CgNpbWcQARgAMgcIABCxAxBDMgQIABBDMgQIABBDMgQIABBDMgQIABBDMgUIABCxAzIFCAAQsQMyBwgAELEDEEMyBQgAELEDMgUIABCxAzoECCMQJzoCCAA6BwgjEOoCECdQ2tkEWN3sBGCF_QRoAXAAeAKAAXOIAe0LkgEEMTguMZgBAKABAaoBC2d3cy13aXotaW1nsAEKwAEB&sclient=img&ei=fqN0X8mvBM7xtAbWkLuIAQ&bih=829&biw=1696&client=firefox-b-1-d">Velociraptor</a></li>
+            <li><a href="https://www.nhm.ac.uk/discover/dino-directory/brachiosaurus.html">Brachiosaurus</a></li>
+            <li><a href="https://www.nhm.ac.uk/discover/dino-directory/dilophosaurus.html">Dilophosaurus</a></li>
+            <li><a href="https://www.nhm.ac.uk/discover/dino-directory/gallimimus.html">Gallimimus</a></li>
+            <li><a href="https://www.nhm.ac.uk/discover/dino-directory/parasaurolophus.html">Parasaurolophus</a></li>
+            <li><a href="https://www.nhm.ac.uk/discover/dino-directory/triceratops.html">Triceratops</a></li>
+            <li><a href="https://www.nhm.ac.uk/discover/dino-directory/tyrannosaurus.html">Tyrannosaurus Rex</a></li>
+            <li><a href="https://www.nhm.ac.uk/discover/dino-directory/velociraptor.html">Velociraptor</a></li>
         </ol>
             <a href="./index.html">Back to Home Page</a>
         </nav>
