Resize the trex image

--- a/bio.html
+++ b/bio.html
@@ -4,7 +4,7 @@
        <title>Roar Picture</title>
     </head>
     <Body>
-        <img src="./T-rex picture.jpg"/>
+        <img src="./T-rex picture.jpg" alt="T-Rex Picture" width="700" height="300"/>
         
         <h2>Jurassic Park</h2>
         <nav>
