--- a/bio.html
+++ b/bio.html
@@ -17,6 +17,7 @@
             <li><a href="https://www.nhm.ac.uk/discover/dino-directory/tyrannosaurus.html">Tyrannosaurus Rex</a></li>
             <li><a href="https://www.nhm.ac.uk/discover/dino-directory/velociraptor.html">Velociraptor</a></li>
         </ol>
+            <a href="./passions.html">Dinosaur Pictures</a>
             <a href="./index.html">Back to Home Page</a>
         </nav>
     </Body>
